<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyNoteActivity" >
	
	<EditText
        android:id="@+id/create_mynote_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mynote_title" />

	<FrameLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
		
		<EditText
	        android:id="@+id/create_mynote_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/mynote_text"
	        android:inputType="textMultiLine">
	        <requestFocus />
	    </EditText>
	</FrameLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <Button
	        android:id="@+id/button_create"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="38dp"
	        style="@style/AppBaseTheme"
	        android:text="@string/save"
	        android:onClick="createMyNote" />

	    <Button
	        android:id="@+id/button_cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:layout_marginLeft="58dp"
	        style="@style/AppBaseTheme"
	        android:text="@string/cancel"
	        android:onClick="cancelOperation" />
	</LinearLayout>

</LinearLayout>